--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,106 @@
 body {
-  font-family: "Playfair Display", serif;
+  font-family: "Roboto Mono", sans-serif;
   text-align: center;
+  border: #e396db 10px solid;
 }
+
+nav {
+  background: linear-gradient(181deg, #e396db, #60ff00);
+  background-size: 400% 400%;
+
+  -webkit-animation: AnimationName 30s ease infinite;
+  -moz-animation: AnimationName 30s ease infinite;
+  animation: AnimationName 30s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+  0% {
+    background-position: 47% 0%;
+  }
+  50% {
+    background-position: 54% 100%;
+  }
+  100% {
+    background-position: 47% 0%;
+  }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 47% 0%;
+  }
+  50% {
+    background-position: 54% 100%;
+  }
+  100% {
+    background-position: 47% 0%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 47% 0%;
+  }
+  50% {
+    background-position: 54% 100%;
+  }
+  100% {
+    background-position: 47% 0%;
+  }
+}
+
 h1 {
   font-size: 80px;
+  overflow: hidden;
+  border-right: 0.15em solid black;
+  white-space: nowrap;
+  margin: 0 auto;
+  letter-spacing: 0.1em;
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
+
+/* typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: black;
+  }
+}
+
 .memoji {
   text-align: center;
+  max-width: 350px;
+}
+
+.about {
+  padding-top: 50px;
+}
+
+.technologies {
+  padding: 50px 50px;
+}
+
+.tech-icon {
+  width: 50px;
+  font-size: 50px;
+}
+
+.graphql {
+  width: 50px;
+}
+
+.index-contact {
+  margin: 25px;
+  max-width: 200px;
 }
