Changed fonts and removed animations

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,86 +1,39 @@
 body {
-  font-family: "Roboto Mono", sans-serif;
+  font-family: "Nunito", sans-serif;
   text-align: center;
-  border: #e396db 10px solid;
 }
 
 nav {
-  background: linear-gradient(181deg, #e396db, #60ff00);
-  background-size: 400% 400%;
-
-  -webkit-animation: AnimationName 30s ease infinite;
-  -moz-animation: AnimationName 30s ease infinite;
-  animation: AnimationName 30s ease infinite;
-}
-
-@-webkit-keyframes AnimationName {
-  0% {
-    background-position: 47% 0%;
-  }
-  50% {
-    background-position: 54% 100%;
-  }
-  100% {
-    background-position: 47% 0%;
-  }
-}
-@-moz-keyframes AnimationName {
-  0% {
-    background-position: 47% 0%;
-  }
-  50% {
-    background-position: 54% 100%;
-  }
-  100% {
-    background-position: 47% 0%;
-  }
-}
-@keyframes AnimationName {
-  0% {
-    background-position: 47% 0%;
-  }
-  50% {
-    background-position: 54% 100%;
-  }
-  100% {
-    background-position: 47% 0%;
-  }
+  background-color: #9fc088;
 }
 
 h1 {
+  font-family: "Bebas Neue", sans-serif;
   font-size: 80px;
   overflow: hidden;
-  border-right: 0.15em solid black;
-  white-space: nowrap;
   margin: 0 auto;
   letter-spacing: 0.1em;
-  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+  padding-top: 50px;
 }
 
-/* typing effect */
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
+@media (max-width: 700px) {
+  h1 {
+    font-size: 50px;
   }
 }
 
-/* typewriter cursor effect */
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: black;
-  }
+h2 {
+  font-family: "Bebas Neue", sans-serif;
+}
+
+h3 {
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .memoji {
   text-align: center;
-  max-width: 350px;
+  max-width: 300px;
 }
 
 .about {
@@ -94,14 +47,19 @@ h1 {
 .tech-icon {
   width: 50px;
   font-size: 50px;
+  padding-bottom: 50px;
 }
 
 .learn-more {
-  background-color: #60ff00;
+  background-color: #9fc088;
   margin: 0 auto;
   padding-top: 20px;
 }
 .index-contact {
   margin: 25px;
   max-width: 200px;
+}
+.contact-button {
+  border: none;
+  border-radius: 25px;
 }
