--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,14 +67,9 @@ h3 {
 
 
 
-.screenshot img{
+.screenshot{
   max-width: 90%
-  transition: 1s ease;
+
   }
   
-  .screenshot img:hover{
-  -webkit-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  transform: scale(1.2);
-  transition: 1s ease;
-  }
+  
