--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,3 +94,9 @@ h3 {
     .about-text{
       text-align: left;
     }
+
+    .cv-button{
+      max-width: 60%;
+      border-radius: 50px;
+      border-style: none;
+    }
