Redesigned index page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,45 @@
 body {
-  font-family: "Nunito", sans-serif;
-  text-align: center;
+  font-family: 'Roboto', sans-serif;
   color: #2D2A36;
   background-color: #F6F6f6;
 }
 
-nav {
-  background-color: #9fc088;
-  font-family: "Bebas Neue", sans-serif;
-  font-size: 50px;
+
+.titlebox {
+  background-color: #ffebce;
+  animation-name: colourchange;
+  animation-duration: 15s;
+  
 }
 
+
+.home-icon {
+  font-size: 30px;
+}
+
+@keyframes colourchange {
+  0%   {background-color:#ffebce; }
+  25%  {background-color:#ffebce }
+  50%  {background-color:#e1ffd1; }
+  75%  {background-color:#ffd7ea; }
+  100% {background-color:#ffd7ea;}
+}
+
+.hello-title{
+  display: flex;
+  padding-top: 12.5rem;
+  padding-bottom: 6rem;
+  padding-right: 150px;
+  justify-content: center;
+  
+  
+  
+ }
+
 h1 {
-  font-family: "Bebas Neue", sans-serif;
+
   font-size: 80px;
-  overflow: hidden;
-  margin: 0 auto;
-  letter-spacing: 0.1em;
+  font-weight: bold;
   padding-top: 50px;
 }
 
@@ -27,39 +50,35 @@ h1 {
 }
 
 h2 {
-  font-family: "Bebas Neue", sans-serif;
+  font-weight: 300;
 }
 
 h3 {
-  font-family: "Bebas Neue", sans-serif;
+  
   padding-top: 25px;
   padding-bottom: 25px;
 }
 
+.work-title{
+  font-weight: 400
+}
+
 .memoji {
   text-align: center;
-  max-width: 350px;
+  max-width: 300px;
 }
 
-.about {
+.about, .work-title {
   padding-top: 50px;
+  padding-left: 6rem;
+  padding-right: 5rem;
 }
 
-.technologies {
-  padding: 50px 50px;
+.work-font{
+  font-weight: 500;
 }
 
-.tech-icon {
-  width: 50px;
-  font-size: 50px;
-  padding-bottom: 50px;
-}
 
-.learn-more {
-  background-color: #9fc088;
-  margin: 0 auto;
-  padding-top: 20px;
-}
 .index-contact {
   margin: 25px;
   max-width: 200px;
