--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: 'Neue Montreal';
+  font-weight: normal;
+  src: url("OTF/PPNeueMontreal-Medium.otf") format("opentype");
+}
+
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Neue Montreal', sans-serif;
+  font-weight: 300;
   color: #2D2A36;
   background-color: #F6F6f6;
 }
@@ -128,6 +135,4 @@ h3 {
       max-width: 20%;
     }
 
-    #work{
-      font-weight: 500;
-    }
+    
